Fixed Global Styles
Fixed date picker (smaller width)
Fixed dropdown, up arrow - now always down
Fixed overflowing of dropdown

--- a/css/generatedaily-all.css
+++ b/css/generatedaily-all.css
@@ -40,7 +40,6 @@ body{
 }
 
 #toname{
-    font-weight: bold;
     float: right;
     margin-top: 10px;
     margin-right: 965px;
@@ -65,7 +64,6 @@ body{
     float: right;
     margin-top: 10px;
     margin-right: -800px;
-    font-weight: bold;
 }
 
 #day{
@@ -123,10 +121,6 @@ table {
 table td, table th {
     padding: 9px 10px;
     text-align: left;
-}
-
-td{
-    font-size:14px;
 }
 
 .row-data{
